fix nav on mobile and add scroll to home

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -392,6 +392,7 @@ header {
   flex-wrap: wrap;
   align-items: center;
   flex-direction: row;
+  justify-content: space-between;
   padding: 15px;
   margin: 0 auto;
   background: rgba(4, 13, 19, 0.7960784314);
@@ -424,63 +425,10 @@ header .header-nav ul li .scroll-to:hover {
     margin: 0;
   }
 }
-header .header-nav ul.primary-nav {
-  margin: 0 0 0 50px;
-}
-.nav-toggle {
-  position: absolute;
-  top: 0;
-  right: 15px;
-  z-index: 999999;
-  padding: 10px 35px 16px 0;
-  cursor: pointer;
-}
-.nav-toggle:focus {
-  outline: none;
-}
-.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 35px;
-  height: 3px;
-  -moz-border-radius: 1px;
-  -webkit-border-radius: 1px;
-  border-radius: 1px;
-  background: #fff;
-  cursor: pointer;
-}
-.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
-  -moz-transition: all 300ms ease-in-out;
-  -o-transition: all 300ms ease-in-out;
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-.nav-toggle span:before {
-  top: -10px;
-}
-.nav-toggle span:after {
-  bottom: -10px;
-}
-.nav-toggle.active span {
-  background-color: transparent;
-}
-.nav-toggle.active span:before, .nav-toggle.active span:after {
-  top: 0;
-}
-.nav-toggle.active span:before {
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-.nav-toggle.active span:after {
-  top: 10px;
-  -ms-transform: translatey(-10px) rotate(-45deg);
-  transform: translatey(-10px) rotate(-45deg);
-}
-
-.nav-icon {
-  visibility: hidden;
-  transition: all 300ms ease-in-out;
+@media (max-width: 435px) {
+  header .header-nav .btn-small {
+    padding: 8px 15px !important;
+  }
 }
 
 /* ==========================================================================
